--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -13,12 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import time\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Import API key\n",
+    "from api_keys import weather_api_key\n",
+    "\n",
+    "# Incorporated citipy to determine city based on latitude and longitude\n",
+    "from citipy import citipy\n",
+    "\n",
+    "# Output File (CSV)\n",
+    "output_data_file = \"output_data/cities.csv\"\n",
+    "\n",
+    "# Range of latitudes and longitudes\n",
+    "lat_range = (-90, 90)\n",
+    "lng_range = (-180, 180)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -29,21 +50,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "643"
+       "635"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "# List for holding lat_lngs and cities\n",
+    "lat_lngs = []\n",
+    "cities = []\n",
+    "\n",
+    "# Create a set of random lat and lng combinations\n",
+    "lats = np.random.uniform(lat_range[0], lat_range[1], size=1500)\n",
+    "lngs = np.random.uniform(lng_range[0], lng_range[1], size=1500)\n",
+    "lat_lngs = zip(lats, lngs)\n",
+    "\n",
+    "# Identify nearest city for each lat, lng combination\n",
+    "for lat_lng in lat_lngs:\n",
+    "    city = citipy.nearest_city(lat_lng[0], lat_lng[1]).city_name\n",
+    "    \n",
+    "    # If the city is unique, then add it to a our cities list\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "\n",
+    "# Print the city count to confirm sufficient count\n",
+    "len(cities)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1797,9 +1838,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mypydev",
    "language": "python",
-   "name": "python3"
+   "name": "mypydev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1811,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
